Revision history for Perl module CLDR::Number

0.09_01 XXX
 - Upgrade CLDR data from v24 to v26
 - Add bin/generate-cldr-data.pl script to update Perl data from CLDR JSON
 - Change CLF (Chilean Unit of Account (UF)) currency fraction digits
   from 0 to 4
 - Change CZK (Czech Republic Koruna) currency cash fraction digits from 2 to 0
   with default fraction digits remaining 2
 - Change HUF (Hungarian Forint) currency fraction digits from 0 to 2 with
   cash fraction digits remaining 0
 - Change UYI (Uruguayan Peso (Indexed Units)) currency fraction digits
   from 2 to 0
 - Change THB (Thai Baht) symbol from `฿` to `THB` for most locales including
   root and th (Thai)
 - Change many other currency symbols for many locales, including
   DKK (Danish Krone) in da (Danish) from `kr` to `kr.` and USD (US Dollar) in
   fr-CA (Canadian French) from `$US` to `$ US`

0.09 2014-11-12
 - Deprecate use of the the `locale` method as a setter. In the future the
   formatter objects’ locale will become immutable. Please see [issue #38] for
   details and to submit comments or concerns:
   https://github.com/perl-cldr/cldr-number-pm5/issues/38
 - Add items to the FAQ and TODO docs

0.08 2014-03-28
 - Improve locale inheritance to use parent overrides from CLDR data [issue #34]

0.07 2014-03-25
 - Add numbering_system attribute and support non-Latin decimal numbering
   systems [issue #8]
 - Use default numbering system for locale [issue #9]
 - Use numbering system from Unicode extension of locale when provided
 - Integrate Travis CI, Devel::Cover, and Coveralls with GitHub repo

0.06 2014-02-28
 - Improve documentation
 - Add FAQ

0.05 2014-01-26
 - Validate numeric arguments to methods in the same way as core Perl functions:
   warn on non-numeric values and use the leading numeric portion when
   available, otherwise 0 [issue #23]
 - Add class name to uninitialized value warnings [issue #22]

0.04 2014-01-21